--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "craco build",
     "test": "craco test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint.js src/"
+    "lint": "node_modules/eslint/bin/eslint.js src/"
   },
   "pre-commit": [
     "lint"
@@ -34,7 +34,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
     "redux-saga": "^1.1.1"
@@ -46,6 +46,7 @@
     "babel-plugin-import": "^1.12.2",
     "babel-preset-react": "^6.24.1",
     "craco-alias": "^1.0.4",
+    "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-jest": "^22.20.0",
